[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.136.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "mistralai>=0.4.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "streamlit>=1.56.0",
    "uvicorn>=0.45.0",
]
